[tool.poetry]
name = "skellybot"
version = "0.1.0"
description = ""
authors = ["Skelly Freemocap <info@freemocap.org>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <3.12"
langchain-cli = {version = "^0.0.20", extras = ["serve"]}
python-dotenv = "^1.0.0"
pypdf = "^3.17.4"
pymongo = "^4.6.1"
openai = "^1.6.1"
tiktoken = "^0.5.2"
google-cloud-secret-manager = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
